# pupil-detectors

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: build-deps.yml  build-detectors.yml  main.yml
pupil_detectors/: __init__.py  c_types_wrapper.pxd  cutils.pxd  detector_2d.cpp  detector_2d.pyx  detector_3d.cpp  detector_3d.pyx  detector_base.pxd  detector_base.py  detector_base.pyx  detector_dummy.py  utils.py
pupil_detectors/detector_2d/: __init__.py  detector_2d.pxd  detector_2d.py  detector_2d.pyx  detector_2d_core.pyx
pupil_detectors/detector_3d/: __init__.py  detector_3d.py  detector_3d.pyx  detector_3d_core.pyx
pupil_detectors/plugins/: __init__.py  detector_2d_plugin.py  detector_3d_plugin.py  detector_base_plugin.py  detector_dummy_plugin.py  plugin_registry.py
scripts/: manylinux-before-all.sh
src/pupil_detectors/: CMakeLists.txt  __init__.py  c_types_wrapper.pxd  coarse_pupil.pxd  cutils.pxd  detector_base.pxd  detector_base.pyx  roi.py  utils.py
src/pupil_detectors/cpp/shared/include/common/: constants.h  types.h
src/pupil_detectors/cpp/singleeyefitter/: LICENSE.md  mathHelper.h  projection.h  utils.h
src/pupil_detectors/detector_2d/: CMakeLists.txt  __init__.py  detect_2d.hpp  detector_2d.pxd  detector_2d.pyx
src/pupil_detectors/detector_3d/: __init__.py  detector_3d.pyx
src/shared_cpp/include/common/: types.h
src/singleeyefitter/: EllipseDistanceApproxCalculator.h  EyeModel.cpp  EyeModelFitter.cpp  EyeModelFitter.h
tests/: test_api.py  test_package.py
