[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]>=3.4.1",
    "wheel",
    "scikit-build",
    "cmake",
    "ninja",
    "numpy",                       # need to link against numpy
    "cython",
]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = false

[tool.setuptools_scm]

[pytest.enabler.mypy]
addopts = "--mypy"

[pytest.enabler.cov]
addopts = "--cov"
