[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]>=3.4.1",
    "wheel",
    "scikit-build",
    "cmake",
    "ninja",
    "numpy",
    "cython",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.cibuildwheel]
archs = ["native"]
skip = "{cp,pp}27-* {cp,pp}35-* pp*"

build-frontend = "build"

test-command = "pytest {package}/tests -v"
before-test = ""
test-requires = ["pytest"]
test-extras = []

manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.macos]
before-all = ["brew install eigen opencv"]

[tool.cibuildwheel.linux]
before-all = ["yum install -y eigen3-devel", "bash scripts/manylinux-before-all.sh"]

[tool.cibuildwheel.windows]
before-all = ["choco install eigen opencv"]
environment = { OpenCV_DIR="c:/tools/opencv/build" }
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel} --add-path C:/tools/opencv/build/x64/vc15/bin"
