[metadata]
name = pupil-detectors
description = Pupil Labs 2D Pupil Detector
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pupil-labs/pupil-detectors
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
license = MIT
license_files = [COPYING, COPYING.lesser]
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    numpy
    cysignals;platform_system != "Windows"
    opencv-python;platform_system == "Windows"
    importlib-metadata;python_version<"3.8"
python_requires = >=3.6

[options.extras_require]
docs =
    jaraco.packaging>=9
    rst.linker>=1.9
    sphinx
testing =
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.3
    pytest-mypy>=0.9.1;python_implementation != "PyPy"
